--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <title>Lesson-4</title>
 </head>
 
-<body>
+<body data-theme="light">
+  Здоров
   <script type="module" src="/js/main.js"></script>
 </body>
 
