--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <load src="./html/base/head.html" title="Home" />
 
-<body data-theme="light">
-  Здоров
+<body class="body" data-theme="light">
+  <load src="./html/components/header.html" />
   <script type="module" src="/js/main.js"></script>
 </body>
 
