--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 
 <body class="body" data-theme="light">
   <load src="./html/components/header.html" />
+  <load src="./html/components/home/hero.html" />
   <script type="module" src="/js/main.js"></script>
 </body>
 
