Created overview section

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 <body class="body" data-theme="light">
   <load src="./html/components/header.html" />
   <load src="./html/components/home/hero.html" />
-  <script type="module" src="/js/main.js"></script>
+  <load src="./html/components/home/overview.html" />
+  <script type="module" src="/js/main.js">
+  </script>
 </body>
 
 </html>
