--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <load src="./html/components/home/overview.html" />
   <load src="./html/components/home/features.html" />
   <load src="./html/components/home/strength.html" />
+  <load src="./html/components/home/partners.html" />
+  <load src="./html/components/home/insights.html" />
+  <load src="./html/components/home/testimonials.html" />
   <script type="module" src="/js/main.js"></script>
 </body>
 
