--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <load src="./html/components/home/partners.html" />
   <load src="./html/components/home/insights.html" />
   <load src="./html/components/home/testimonials.html" />
+  <load src="./html/components/footer.html" />
   <script type="module" src="/js/main.js"></script>
 </body>
 
