Changed config stylelint, added contact page

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<load src="./html/base/head.html" title="Contacts" />
+  <load src="./html/base/head.html" title="Contacts" />
 
-<body class="body" data-theme="light">
-  <load src="./html/components/header.html" />
-  <load src="./html/components/contacts/contact-us.html" />
-  <load src="./html/components/footer.html" />
-  <script type="module" src="/js/contact-us.js"></script>
-</body>
-
+  <body class="body" data-theme="light">
+    <load src="./html/components/header.html" />
+    <load src="./html/components/contacts/contact-us.html" />
+    <load src="./html/components/partners.html" />
+    <!-- <load src="./html/components/contacts/get-started.html" /> -->
+    <load src="./html/components/footer.html" />
+    <script type="module" src="/js/contact-us.js"></script>
+  </body>
 </html>
