--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,7 +6,7 @@
     <load src="./html/components/header.html" />
     <load src="./html/components/contacts/contact-us.html" />
     <load src="./html/components/partners.html" />
-    <!-- <load src="./html/components/contacts/get-started.html" /> -->
+    <load src="./html/components/contacts/get-started.html" />
     <load src="./html/components/footer.html" />
     <script type="module" src="/js/contact-us.js"></script>
   </body>
